# tapasco-riscv

./: .gitignore  Makefile  README.md  riscv_pe_project.tcl
IP/AXIGate/: component.xml  mkAXIGate.v
IP/AXIMMStreamAdapter/: component.xml
IP/Controller/: component.xml
IP/axi_ctrl/: component.xml
IP/axi_offset/: component.xml
common/: add_module.tcl  check_ips.tcl  common_addr_segments.tcl  connect_common_interfaces.tcl  connect_common_ports.tcl  cpu_vlnv.tcl  ip_repo_path.tcl  module_info.tcl  package.tcl  parse_args.tcl  place_IPEC_intefaces.tcl  place_local_memory.tcl  place_tapasco_control.tcl
debugging/: gdb_script  tapasco.cfg
debugging/logdbg/: Makefile  Makefile_verilator  Makefile_verilator.mk  dm_interface.cpp  dm_interface.hpp  dm_memory_interface.cpp  dm_memory_interface.hpp  dm_testbench_interface.cpp  dm_testbench_interface.hpp  logdbg  logdbg.cpp  main.cpp  pydbg.py  ringbuf.cpp  ringbuf.hpp
debugging/riscv_debug_generator/: Cargo.toml
debugging/riscv_debug_generator_example/: Cargo.toml
debugging/riscv_debug_generator_example/src/: main.rs
picolibc_support/: build_picolibc.sh  iob.c
picolibc_support/linker_script/: picolibc_adjusted.ld
picolibc_support/tapasco_iob/: iob.c  meson.build
programming/: host_template.c  rv_template.c
programming/examples/: README.md
programming/examples/host/simple_sum/: CMakeLists.txt  simple_sum_host.c  simple_sum_host.cpp
programming/examples/picolibc_example/host/: CMakeLists.txt  README.md  picolibctest_host.c  rv_stdio.h
riscv/: flute64  piccolo64
riscv/cva5/: cva5_tapasco.patch  package.tcl  setup.sh
riscv/cva6/: clint_core.files  core.files  dm_core.files  package.tcl  package_dm.tcl  package_timer.tcl  preprocess_includes.sh  setup.sh  submodulePatches.patch
riscv/flute32/: flute_tapasco.patch  package.tcl  setup.sh
riscv/orca/: setup.sh
riscv/orca_mxp/: setup.sh
riscv/piccolo32/: package.tcl  piccolo_tapasco.patch  setup.sh
specific_tcl/: cva5_pe_project.tcl  cva6_pe_project.tcl  flute32_pe_project.tcl  flute64_pe_project.tcl  orca_mxp_pe_project.tcl  orca_pe_project.tcl  piccolo32_pe_project.tcl  piccolo64_pe_project.tcl  picorv32_pe_project.tcl  scr1_pe_project.tcl  swerv_eh2_pe_project.tcl  swerv_pe_project.tcl  taiga32_bsv_pe_project.tcl  taiga64_bsv_pe_project.tcl  taiga_pe_project.tcl  vexriscv_pe_project.tcl
(+78 files in other folders)
