[package]
name = "riscv_debug_generator_example"
version = "0.1.0"
authors = ["Kai Meinhard <kaimeinhard@hotmail.de>"]
edition = "2018"


[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
# TODO this is an out of repo path
tapasco = { path = "../../../tapasco/runtime/libtapasco" }
riscv_debug_generator = { path = "../riscv_debug_generator" }
snafu = "0.6.6"
memmap = "0.7.0"
getset = "0.1.0"
volatile = "0.2.6"
ctrlc = "3.1.6"
crossbeam = "0.7.3"
capnp = "0.13.4"
capnpc = "0.13"
